tests/checker/ok/commutative_both_directions.can
Greeted = Greeting

Greeting = String

Name = String

Greeting * Name => Greeted {
    Greeting
}

Unit => Program {
    Greeting("hello") -> Greeted(Name("world"))
    Name("world") -> Greeted(Greeting("hello"))
    "ok" -> Print
}
