tests/checker/fail/unknown_type_in_typedef.can
Foo = NeverDeclared

Unit => Program {
    "ok" -> Foo
    "ok" -> Print
}
